Favicon, responsive images, image fixes, stopped the flickering blue back

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -531,6 +531,8 @@
 
 	@media screen and (max-width: 1280px) {
 
+		
+
 		.row > * {
 			padding: 0 0 0 1.5rem;
 		}
@@ -1623,7 +1625,7 @@
 	}
 
 	body {
-		background-color: #1e252d;
+		background-color: #ded7d1;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -1668,7 +1670,7 @@
 		}
 
 	body {
-		color: #212931;
+		color: #2d2621;
 	}
 
 	body, input, select, textarea {
@@ -1701,7 +1703,7 @@
 
 	p {
 		text-align: justify;
-		margin: 0 0 2rem 0;
+		margin: 0 0 0.5rem 0;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -2514,6 +2516,7 @@
 /* Image */
 		.image-gallery {
 			position: relative;
+			margin: 0 auto;
 		}
 
 		.text {
@@ -2524,8 +2527,8 @@
 		.image.profile {
 			display: inline-block;
 			position: relative;
-			width: auto;
-			margin: 1.5rem 0;
+			width: 100%;
+			margin: 0.3rem 0;
 			height: 400px;
 			overflow: hidden;
 		}
@@ -2538,9 +2541,10 @@
 		.image.fill {
 			display: inline-block;
 			position: relative;
-			width: auto;
+			width: 100%;
 			margin: 1.5rem 0;
 			height: 400px;
+			border-radius: 0.5px;
 			overflow: hidden;
 		}
 
@@ -2616,10 +2620,39 @@
 				width: 100%;
 			}
 
+		@media screen and (max-width: 1280px) {
+			.image.fit {
+				height: 200px;
+				margin: 0.4rem 0.4rem;
+
+			}
+
+			.image.fill {
+				height: 300px;
+			}
+
+			.image.profile {
+				height: 400px;
+			}
+
+			.text {
+				padding: 0%;
+			}
+		}
+
 		@media screen and (max-width: 736px) {
 
 			.image.fit {
-				margin: 2rem 0;
+				height: 150px;
+
+			}
+
+			.image.fill {
+				height: 200px;
+			}
+
+			.image.profile {
+				height: 300px;
 			}
 
 			.image.main {
@@ -2627,6 +2660,27 @@
 			}
 
 		}
+
+		@media screen and (max-width: 600px) {
+
+			.image.fit {
+				height: 150px;
+
+			}
+
+			.image.fill {
+				height: 100px;
+			}
+
+			.image.profile {
+				height: 200px;
+			}
+
+			.image.main {
+				margin: 2rem 0;
+			}
+
+		}		
 
 	a.image {
 		overflow: hidden;
@@ -2636,6 +2690,7 @@
 			-moz-transition: -moz-transform 0.2s ease-out;
 			-webkit-transition: -webkit-transform 0.2s ease-out;
 			-ms-transition: -ms-transform 0.2s ease-out;
+		
 			transition: transform 0.2s ease-out;
 		}
 
@@ -2785,6 +2840,16 @@
 					}
 
 			@media screen and (max-width: 480px) {
+
+				.image.fit {
+					margin: 0 0;
+					height: 100px;
+	
+				}
+	
+				.image.main {
+					margin: 2rem 0;
+				}
 
 				ul.actions {
 					margin: 0 0 2rem 0;
